# dafsa

./: .codacy.yml  .codecov.yml  .readthedocs.yml  .travis.yml  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  dawg_gen.py  paper.json  paper.md  pyproject.toml  setup.cfg  setup.py  temp.py
.github/workflows/: CI.yml
conda/: meta.yaml
daciuk/: README.md
dafsa/: __init__.py  __main__.py  dafsa.py  output.py  utils.py
docs/: .gitignore  conf.py  index.rst  quickstart.rst  readme.rst
docs/source/: dafsa.rst  modules.rst
manuscript/: paper.bib  paper.md
paper/: paper.bib
resources/: ciura.txt  dna.txt  phonemes.txt  tresoldi.txt  wikipedia.txt
src/dafsa/: __init__.py  __main__.py  common.py  dafsa.py  dafsaarray.py  exceptions.py  fsa.py  minarray.py  minimize.py  node.py  searchgraph.py  template.dot  trie.py
tests/: test_dafsa.py
