[metadata]
name = dafsa
version = 2.0
author = Tiago Tresoldi
author_email = tiago.tresoldi@lingfil.uu.se
license = MIT
description = Library for computing Deterministic Acyclic Finite State Automata (DAFSA)
keywords =
    dafsa
    dawg
    finite state automata
    deterministic acyclic finite state automaton
    directed acyclic word graph
url = https://github.com/tresoldi/dafsa
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Linguistic
project_urls =
    Documentation = https://dafsa.readthedocs.io

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires = networkx
include_package_data = True
python_requires = >=3.6
test_suite = tests
tests_require =

[options.packages.find]
where = src

[options.entry_points]
console_scripts = dafsa=dafsa.__main__:main

[options.extras_require]
dev = black; flake8; twine; wheel
test = pytest
